kafka/dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-console
  namespace: guardian
  labels:
    k8s-app: kafka-console
spec:
  template:
    spec:
      containers:
        - name: kafka-console
