kafka/dev/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kafka-console
  namespace: guardian
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`kafka.dev.naturalselectionlabs.com`)
      services:
        - name: kafka-console
          port: 8080
